<resources>
    <string name="app_name">StarsTV</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="str_search">搜索</string>
    <string name="empty_description">Empty</string>

    <string name="N_A">N/A</string>
    <string name="close">Close</string>
    <string name="exit">Exit</string>
    <string name="sample">Sample</string>
    <string name="recent">Recent</string>
    <string name="settings">Settings</string>
    <string name="tracks">Tracks</string>
    <string name="toggle_player">Player</string>
    <string name="toggle_render">Render</string>
    <string name="toggle_ratio">Scale</string>
    <string name="show_info">Info</string>
    <string name="vdec">vdec</string>
    <string name="fps">fps</string>
    <string name="v_cache">v-cache</string>
    <string name="a_cache">a-cache</string>
    <string name="load_cost">load-cost</string>
    <string name="seek_cost">seek_cost</string>
    <string name="seek_load_cost">seek_load_cost</string>
    <string name="tcp_speed">tcp_speed</string>
    <string name="bit_rate">bit_rate</string>

    <string name="media_information">Media Information</string>
    <string name="mi_player">Player</string>
    <string name="mi_media">Media</string>
    <string name="mi_profile_level">Profile level</string>
    <string name="mi_pixel_format">Pixel format</string>
    <string name="mi_resolution">Resolution</string>
    <string name="mi_length">Length</string>
    <string name="mi_stream_fmt1">Stream #%d</string>
    <string name="mi_type">Type</string>
    <string name="mi_language">Language</string>
    <string name="mi_codec">Codec</string>
    <string name="mi_frame_rate">Frame rate</string>
    <string name="mi_bit_rate">Bit rate</string>
    <string name="mi_sample_rate">Sample rate</string>
    <string name="mi_channels">Channels</string>
    <string name="mi__selected_video_track">*</string>
    <string name="mi__selected_audio_track">*</string>
    <string name="mi__selected_subtitle_track">*</string>

    <string name="TrackType_video">Video</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_unknown">Unknown</string>

    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_error_button">OK</string>

    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>

    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>

    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>

    <string name="entertainment">Entertainment</string>
    <string name="gaming">Gaming</string>
    <string name="music">Music</string>
    <string name="latest">Latest</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search</string>

    <string name="str_code_error">加载失败！错误代码:( %1$s )</string>
    <string name="str_network_error">网络连接失败，请检查网络！</string>
    <string name="str_needpay_error">付费视频，无法播放！</string>
    <string name="str_live_tv_epg_data">正在播出: %1$s </string>
    <string name="str_live_tv_epg_current_tips">正在播出:</string>
    <string name="str_live_tv_epg_next_tips">即将播出:</string>
    <string name="str_live_tv_epg_info_loading">正在获取节目信息</string>
    <string name="str_live_tv_channel_list_tips_default">左右键切换列表,长按OK键增/删喜爱列表</string>
    <string name="str_live_tv_channel_list_tips_history">长按OK键增/删喜爱列表，菜单键清空历史列表</string>
    <string name="str_live_tv_channel_list_tips_favorite">左右键切换列表，长按OK键移除喜爱列表</string>
    <string name="str_live_tv_tips_ok">OK键显示列表</string>
    <string name="str_live_tv_tips_up_down">上下键切换频道</string>
    <string name="str_live_tv_epg_empty">未获取到节目信息</string>
    <string name="str_live_tv_channel_list_history">观看历史</string>
    <string name="str_live_tv_channel_list_all">全部</string>
    <string name="str_live_tv_channel_list_cctv">央视</string>
    <string name="str_live_tv_channel_list_satellite">卫视</string>
    <string name="str_live_tv_channel_list_favourite">喜爱</string>

    <string name="str_media_list_type_list_update">最近更新</string>
    <string name="str_media_list_type_list_hot">本周热播</string>
    <string name="str_media_list_type_list_costum">古装传奇</string>
    <string name="str_media_list_type_list_urban">时尚都市</string>
    <string name="str_media_list_type_list_crux">悬疑惊悚</string>
    <string name="str_media_list_type_list_war">热血抗战</string>
    <string name="str_media_list_type_list_idol">偶像经典</string>
    <string name="str_media_list_type_list_online">精彩网剧</string>
    <string name="str_media_list_type_list_peiod">年代传奇</string>
    <string name="str_media_list_type_list_crime">罪案追击</string>
    <string name="str_media_list_type_list_great">口碑神剧</string>
    <string name="str_media_list_type_list_family">家庭生活</string>
    <string name="str_media_list_type_list_martialarts">武侠传奇</string>
    <string name="str_media_list_type_list_comedy">喜剧乐翻天</string>

    <string name="str_media_list_type_list_high">口碑高品质</string>
    <string name="str_media_list_type_list_action">最燃动作片</string>
    <string name="str_media_list_type_list_love">爱情连连看</string>
    <string name="str_media_list_type_list_cartoon">动画大放送</string>
    <string name="str_media_list_type_list_science">科幻巨制</string>
    <string name="str_media_list_type_list_gunfignt">硬汉枪战</string>

    <string name="str_media_list_type_list_realityshow">真人秀</string>
    <string name="str_media_list_type_list_quyi">戏剧相声</string>
    <string name="str_media_list_type_list_music">音乐天籁</string>
    <string name="str_media_list_type_list_competitive">竞技益智</string>
    <string name="str_media_list_type_list_talkshow">脱口秀</string>
    <string name="str_media_list_type_list_sensibility">情感调解</string>
    <string name="str_media_list_type_list_social">晚会盛宴</string>
    <string name="str_media_list_type_list_interview">名人访谈</string>
    <string name="str_media_list_type_list_cate">美食日记</string>
    <string name="str_media_list_type_list_fashion">时尚生活</string>
    <string name="str_media_list_type_list_news">新闻报导</string>

    <string name="str_media_list_type_list_hotcombat">热血战斗</string>
    <string name="str_media_list_type_list_funny">搞笑日常</string>
    <string name="str_media_list_type_list_chcartoon">优秀国漫</string>
    <string name="str_media_list_type_list_cure">暖心治愈</string>
    <string name="str_media_list_type_list_warmlove">甜蜜爱恋</string>
    <string name="str_media_list_type_list_classics">不朽经典</string>
    <string name="str_media_list_type_list_magic">奇幻魔法</string>
    <string name="str_media_list_type_list_youth">青春校园</string>
    <string name="str_media_list_type_list_sciencefiction">科幻机战</string>
    <string name="str_media_list_type_list_musicidol">音乐偶像</string>
    <string name="str_media_list_type_list_sports">运动竞技</string>
    <string name="str_media_list_type_list_familycartoon">合家欢</string>

    <string name="str_stream">直播</string>

    <string name="str_exit_application">再按一次退出应用</string>

    <!-- User account String-->
    <string name="str_account_info_manager">帐号管理</string>
    <string name="str_account_info_account">帐号</string>
    <string name="str_account_info_password">密码</string>
    <string name="str_account_info_name">姓名</string>
    <string name="str_account_info_phone">手机</string>
    <string name="str_account_info_email">邮箱</string>
    <string name="str_account_info_mobile_verifying">手机认证</string>
    <string name="str_account_info_email_verifying">邮箱认证</string>
    <string name="str_account_info_phone_no_verify">手机未认证</string>
    <string name="str_account_info_email_no_verify">邮箱未认证</string>
    <string name="str_account_info_phone_verify">手机已认证</string>
    <string name="str_account_info_email_verify">邮箱已认证</string>
    <string name="str_account_info_login_info">帐号或手机号登入</string>
    <string name="str_account_info_login_code_info">手机验证码登入</string>
    <string name="str_account_info_edit">编辑</string>
    <string name="str_account_info_register">注册</string>
    <string name="str_account_info_login">登入</string>
    <string name="str_account_info_forget">忘记密码?</string>
    <string name="str_account_info_china_code">+86</string>
    <string name="str_account_info_send_verify_code">发送验证码</string>
    <string name="str_account_info_verify_code">验证码</string>
    <string name="str_account_info_confirm_verify_code">验证</string>

    <string name="stream_description_yt">例如：youtube.com/watch?v=UCUZHFZ9jIKrLroW8LcyJEQQ
\n
所有 YouTube 頻道都使用這種標準網址，主要是以頻道的專屬 ID (網址結尾的數字和英文字母) 做為辨識的依據，直播网址即为直播频道的 ID</string>
    <string name="stream_description_twitch">
        例如：https://www.twitch.tv/butterflyouo
        \n
        直播频道的 ID 即為實況主播名稱</string>
    <string name="stream_description_huya">
        在主播直播间页面内增加多处房间号显示\n
        例如：521521
    </string>
    <string name="stream_description_bili">
        1、打开哔哩哔哩直播官网，点开你想看的直播房间\n
        2、点击如图示分享\n
        例如：http://live.bilibili.com/135246\t数字就是该主播房间的ID
    </string>
    <string name="stream_description_server">
        實況平台的路徑，前面加上RTMP，後面接上串流金鑰\n
        例如：rtmp://127.0.0.1:1935/live + /串流金鑰
    </string>
</resources>
