<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/account_login_container"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  >

  <TextView
    android:id="@+id/account_login_title"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginStart="10dp"
    android:textSize="20sp"
    android:text="@string/str_account_info_login"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    />

  <TextView
    android:id="@+id/account_login_account"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_account_info_account"
    android:layout_marginTop="30dp"
    android:layout_marginStart="20dp"
    android:textSize="16sp"
    app:layout_constraintTop_toBottomOf="@id/account_login_title"
    app:layout_constraintLeft_toLeftOf="@id/account_login_title"
    />

  <EditText
    android:id="@+id/account_login_account_edit"
    style="@style/AccountEditorStyle"
    android:inputType="text"
    android:hint="@string/str_account_info_login_info"
    android:importantForAutofill="no"
    app:layout_constraintTop_toTopOf="@id/account_login_account"
    app:layout_constraintBottom_toBottomOf="@id/account_login_account"
    app:layout_constraintLeft_toRightOf="@id/account_login_account"
    tools:targetApi="O"
    />

  <TextView
    android:id="@+id/account_login_password"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_account_info_password"
    android:layout_marginTop="10dp"
    android:layout_marginStart="20dp"
    android:textSize="16sp"
    android:labelFor="@id/account_login_password_edit"
    app:layout_constraintTop_toBottomOf="@id/account_login_account"
    app:layout_constraintLeft_toLeftOf="@id/account_login_title"
    />

  <EditText
    android:id="@+id/account_login_password_edit"
    style="@style/AccountEditorStyle"
    android:inputType="textPassword"
    android:importantForAutofill="no"
    app:layout_constraintTop_toTopOf="@id/account_login_password"
    app:layout_constraintBottom_toBottomOf="@id/account_login_password"
    app:layout_constraintLeft_toRightOf="@id/account_login_password"
    tools:targetApi="O"
    />

  <Button
    android:id="@+id/account_login_fast_login_button"
    android:minHeight="0dp"
    android:minWidth="0dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_account_info_login_code_info"
    android:layout_marginTop="30dp"
    android:textSize="14sp"
    app:layout_constraintTop_toBottomOf="@id/account_login_password"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toLeftOf="@+id/account_login_forget_password_button"
    app:layout_constraintHorizontal_chainStyle="packed"
    />

  <Button
    android:id="@+id/account_login_forget_password_button"
    android:minHeight="0dp"
    android:minWidth="0dp"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/str_account_info_forget"
    android:layout_marginTop="30dp"
    android:textSize="14sp"
    app:layout_constraintTop_toBottomOf="@id/account_login_password"
    app:layout_constraintLeft_toRightOf="@+id/account_login_fast_login_button"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintHorizontal_chainStyle="packed"
    />



</android.support.constraint.ConstraintLayout>